--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_screenutil: ^5.5.3+2
   iconify_flutter: ^0.0.4
+  faker: ^2.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
